<resources>
    <string name="app_name">PokeTcgData</string>
    <string name="search_cards">Search cards...</string>
    <string name="name_example">charizard</string>
    <string name="stats_card">Set information</string>
    <string name="card_statistics">Card statistics</string>
    <string name="card_information">Card information</string>
    <string name="market_prices_title">Market Prices</string>
    <string name="loading_title">Searching the Pokédex</string>
    <string name="loading_detail">
    Fetching card details and price history…
    </string>
    <string name="loading_cards">Loading cards</string>
    <string name="subtitle_loading_cards">Fetching data from the Pokédex…</string>
    <string name="search_sets">Search sets....</string>
    <!--    strings for loadings-->
    <string-array name="home_loadings_txts">
        <item>Scanning rare cards…</item>
        <item>Checking market prices…</item>
        <item> Almost there…</item>
    </string-array>
    <string-array name="search_loadings_txts">
        <item>Searching the Pokédex…</item>
        <item>Scanning rare cards…</item>
        <item>Matching your query…</item>
        <item>Fetching card details and price history…</item>
    </string-array>
    <string name="filters_title">Filters</string>
    <string name="filters_reset">Reset</string>
    <string name="filters_search_hint">Search card name, artist…</string>
    <string name="filters_rarity">Rarity</string>
    <string name="filters_types">Types</string>
    <string name="filters_card_type">Card Type</string>
    <string name="filters_sets">Sets</string>
    <string name="filters_sets_hint">Select a set</string>
    <string name="filters_price_range">Price Range</string>
    <string name="filters_price_range_value">%1$s - %2$s</string>
    <string name="filters_sort_by">Sort By</string>
    <string name="filters_sort_market_value_desc">Market Value (High to Low)</string>
    <string name="filters_apply">Apply Filters</string>
    <string name="filters_apply_results">See %1$s Cards</string>
    <string name="type_fire">Fire</string>
    <string name="type_water">Water</string>
    <string name="type_grass">Grass</string>
    <string name="type_electric">Electric</string>
    <string name="type_psychic">Psychic</string>
    <string name="type_fighting">Fighting</string>
    <string name="settings_title">Settings</string>
    <string name="settings_language_label">Language</string>
    <string name="settings_save_language">Save language</string>
    <string name="settings_device_id_label">Device ID</string>
    <string name="home_title">PokeTcg</string>
    <string name="sets_toolbar_title">Pokemon Sets</string>
    <string name="loading_sets">Loading sets</string>
    <string name="release_date_format">Release date: %1$s</string>
    <string name="pricing_tcgplayer">TCGPlayer</string>
    <string name="pricing_pricecharting">PriceCharting</string>
    <string name="pricing_cardmarket">Card Market</string>
    <string name="pricing_na">N/A</string>
    <string name="pricing_low_format">Low: %1$s</string>
    <string name="pricing_previous_format">Prev: %1$s</string>
    <string name="card_format_standard">Standard</string>
    <string name="card_format_expanded">Expanded</string>
    <string name="detail_ability">Ability</string>
    <string name="detail_rarity">Rarity</string>
    <string name="detail_regulation_mark">Regulation Mark</string>
    <string name="detail_card_format">Card format</string>
    <string name="detail_illustration">Illustration</string>

</resources>
